style: fix overflow (#11)

--- a/ReactRibbons.scss
+++ b/ReactRibbons.scss
@@ -1,6 +1,7 @@
 .ribbonContainer {
     position: relative;
     min-height: 100px;
+    overflow: hidden;
 }
 
 .rightCornerRibbon {
